Add basic authorization for SOAP web service